test/bad/4.cc
int main()
{
    int x, y, z;
    x = 4.03558 + 4;
}